src/test/deca/context/invalid/homemade/tests/test365_selection_nonclass.deca
// test invalide de la règle 3.65


class A{
    int livre;
    livre.nombre_pages = 50;
}